--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 * {
     margin: 0;
     padding:0;
+    box-sizing: border-box;
 }
 
 body {
@@ -30,14 +31,6 @@ header a {
 
 }
 
-/* Practice class
-.practice {
-    color:black;
-    border-color: black;
-    padding : 5px;
-    font-style: italic;
-}
-*/
 header nav {
     float: right;
     margin: 7px 0;
@@ -52,4 +45,27 @@ header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
     font-size: 22px;
+}
+
+footer {
+    background: #fce138;
+    width: 100%;
+    padding: 40px 35px;
+}
+
+footer h2 {
+    display: inline;
+    color: #024e76;
+    font-size: 30px;
+    margin: 0;
+}
+
+footer div{
+    float: right;
+    line-height: 1.5;
+    text-align: right;
+}
+
+footer a {
+    color: #024e76;
 }
