--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,21 +6,21 @@
 }
 
 body {
-    /*css comment*/
     color: #39a6b2;
-    font-family: Helvetica, Arial, sans-serif;
 }
 
-/* apply styles to <header> */
+/*Header style*/
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    font-family: Helvetica, Arial, sans-serif;
+    color: #fce138;
+    
 }
 
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
     margin: 0;
     display: inline;
 }
@@ -28,13 +28,12 @@ header h1 {
 header a {
     text-decoration: none;
     color: #fce138;
-
 }
 
+/*Header Navigation style */
 header nav {
     float: right;
     margin: 7px 0;
-    
 }
 
 header nav ul li {
@@ -47,6 +46,7 @@ header nav ul li a {
     font-size: 22px;
 }
 
+/*Footer Section */
 footer {
     background: #fce138;
     width: 100%;
@@ -77,9 +77,8 @@ footer a {
     background-size: cover;
     background-position: center;
     position: relative;
-}
-/* Hero Style end */ 
-
+} 
+ /*Form Section */ 
 .hero-form {
     color: #024e76;
     background-color: #fce138;
@@ -102,6 +101,7 @@ footer a {
     margin: 5px 0 15px 0;
 }
 
+
 .form-input {
     border: 1px solid #024e76;
     display: block;
@@ -123,6 +123,7 @@ footer a {
     padding: 10px 20px;
     font-size: 16px;
 }
+
 /* what we do section */
 .intro {
     text-align: center;
@@ -135,6 +136,7 @@ footer a {
     font-size: 20px;
     margin: 0 auto;
 }
+
 /* what you do section */
 .steps {
     text-align: center;
@@ -165,6 +167,7 @@ footer a {
     font-size: 38px;
 }
 
+/*titles/*/
 .section-title {
     font-size: 55px;
     color: #024e76;
@@ -182,6 +185,7 @@ footer a {
     border-color: #39a6b2;
 }
 
+/*Meet the Trainers Section */
 .trainers {
     text-align: center;
 }
@@ -229,6 +233,7 @@ footer a {
     line-height: 1.3;
 }
 
+/*Reach out section */
 .contact {
     background-color: #024e76;
     text-align: center;
@@ -258,7 +263,7 @@ footer a {
     font-size: 32px;
   }
   
-  .contact-info p, .contact-info address {
+.contact-info p, .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 20px;
