--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 
 body {
     color: #39a6b2;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 /*Header style*/
@@ -14,13 +15,13 @@ header {
     padding: 20px 35px;
     background-color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
-    color: #fce138;
     
 }
 
 header h1 {
     font-weight: bold;
     font-size: 36px;
+    color: #fce138;
     margin: 0;
     display: inline;
 }
