add content to hero, replaced image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,8 @@ footer a {
     background-size: cover;
     background-position: center;
     position: relative;
+    padding-top: 30px;
+    
 } 
  /*Form Section */ 
 .hero-form {
