--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,21 +150,17 @@ footer a {
 }
 
 /* what we do section */
-.intro {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 /* what you do section */
 .steps {
-    text-align: center;
     background-color: #fce138;
 }
 
@@ -192,14 +188,15 @@ footer a {
     font-size: 38px;
 }
 
-/*titles/*/
+/*titles*/
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -211,9 +208,6 @@ footer a {
 }
 
 /*Meet the Trainers Section */
-.trainers {
-    text-align: center;
-}
 
 .trainer {
     width: 900px;
@@ -234,12 +228,17 @@ footer a {
     width: 65%;
 }
 
+/* Utility classes */
 .text-left {
     text-align: left;
 }
 
 .text-right {
     text-align: right;
+}
+
+.flex-row {
+    display: flex;
 }
 
 .trainer-bio h3 {
@@ -261,7 +260,6 @@ footer a {
 /*Reach out section */
 .contact {
     background-color: #024e76;
-    text-align: center;
     padding-bottom: 30px;
 }
 
