--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -86,6 +86,7 @@ footer a {
     display:flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
     
 } 
 
@@ -96,7 +97,7 @@ footer a {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -211,7 +212,7 @@ footer a {
 
 /*titles*/
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -344,4 +345,27 @@ footer a {
       text-align: center;
       padding: 15px 0;
       font-size: 16px
+  }
+
+  /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER  */
+  @media screen and (max-width: 980px){
+          /* this will be applied on any screen smaller than 980px*/
+          
+      
+  }
+
+  /* MEDIA QUERY FOR TABLETS AND SMALLER */ 
+  @media screen and (max-width:768px){
+
+          /* This will be applied on any screen betwen 768px and 575px */
+          
+      
+  }
+
+  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+ 
+      /* this will be applied on any screen smaller than 575px */
+      
+    
   }
