--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+:root {
+    --primary-color:#fce138;
+    --secondary-color:#024e76;
+    --tertiary-color:#39a6b2;
+}
 /*applying to every element on page */
 * {
     margin: 0;
@@ -6,14 +11,14 @@
 }
 
 body {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-family: Helvetica, Arial, sans-serif;
 }
 
 /*Header style*/
 header {
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     font-family: Helvetica, Arial, sans-serif;
     display: flex;
     justify-content: space-between;
@@ -32,7 +37,7 @@ header {
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(0,0,0,0.5);
 
@@ -40,7 +45,7 @@ header h1 {
 
 header a {
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 /*Header Navigation style */
@@ -64,15 +69,15 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
 }
 
 /*Footer Section */
 footer {
-    background: #fce138;
+    background: var(--primary-color);
     width: 100%;
     padding: 40px 35px;
     display:flex;
@@ -81,7 +86,7 @@ footer {
 }
 
 footer h2 {    
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -92,7 +97,7 @@ footer div{
 }
 
 footer a {
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 /* Hero Style Start */
@@ -122,18 +127,18 @@ footer a {
 .hero-cta h2 {
     font-style:italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
  /*Form Section */ 
 .hero-form {
-    color: #024e76;
+    color: var(--secondary-color);
     background-color: rgba(252, 225, 56,0.8);
     padding: 20px;
     border-style: solid;
     border-width: 3px;
-    border-color: #024e76;
+    border-color: var(--secondary-color);
     width: 40%;
     margin: 3.5%; 
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
@@ -151,11 +156,11 @@ footer a {
 
 
 .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     border-radius: 10px;
@@ -172,8 +177,8 @@ footer a {
 }
 
 .hero-form button {
-    background-color: #024e76;
-    color: #fce138;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
     border: none;
     padding: 10px 20px;
     font-size: 16px;
@@ -181,7 +186,7 @@ footer a {
 }
 
 .hero-form button:hover {
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
 }
 
 .checkbox-wrapper input, .radio-wrapper input {
@@ -200,7 +205,7 @@ footer a {
     height: 20px;
     width: 20px;
     background: rgba(255, 255, 255, 0.75);  
-    border: 1px solid #024e76;  
+    border: 1px solid var(--secondary-color);  
     position: absolute;
     top: -4px;
     left: -30px;
@@ -215,7 +220,7 @@ footer a {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: #024e76;
+    background: var(--secondary-color);
     position: absolute;
     left: -29px;
     top: -3px;
@@ -225,8 +230,8 @@ footer a {
     content: "";
     height: 6px;
     width: 14px;
-    border-left: 2px solid #024e76;
-    border-bottom: 2px solid #024e76;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
     position: absolute;
     left: -26px;
     top: 1px;
@@ -248,7 +253,7 @@ footer a {
 /* what we do section */
 .intro p {
     line-height: 1.7;
-    color: #39a6b2;
+    color: var(--tertiary-color);
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
@@ -257,7 +262,7 @@ footer a {
 
 /* what you do section */
 .steps {
-    background-color: #fce138;
+    background-color: var(--primary-color);
 }
 
 .step {
@@ -271,11 +276,11 @@ footer a {
   }
 
   .step:not(:last-child) {
-      border-bottom: 1px solid #39a6b2;
+      border-bottom: 1px solid var(--tertiary-color);
   }
 
 .step h3 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
 }
@@ -283,11 +288,11 @@ footer a {
 .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 .step-text p {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-size: 18px;
     flex: 12;
 }
@@ -311,7 +316,7 @@ footer a {
 /*titles*/
 .section-title {
     font-size: 48px;
-    color: #024e76;
+    color: var(--secondary-color);
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
@@ -320,11 +325,11 @@ footer a {
 }
 
 .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
 }
 
 .secondary-border {
-    border-color: #39a6b2;
+    border-color: var(--tertiary-color);
 }
 
 /*Meet the Trainers Section */
@@ -338,8 +343,8 @@ footer a {
 
 .trainer {
     margin: 20px;
-    background: #024e76;
-    color: #fce138;
+    background: var(--secondary-color);
+    color: var(--primary-color);
     flex: 1;
 }
 
@@ -381,12 +386,12 @@ footer a {
 
 /*Reach out section */
 .contact {
-    background-color: #024e76;
+    background-color: var(--secondary-color);
     padding-bottom: 30px;
 }
 
 .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 .contact-info{
@@ -409,7 +414,7 @@ footer a {
 }
 
 .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
   }
   
@@ -421,11 +426,11 @@ footer a {
   }
   
   .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
   }
 
   .contact-form input, .contact-form textarea {
-      border:1px solid #024e76;
+      border:1px solid var(--secondary-color);
       display:block;
       padding: 7px 15px;
       font-size: 16px;
@@ -443,8 +448,8 @@ footer a {
   .contact-form button {
       width: 100%;
       border: none;
-      background: #fce138;
-      color: #024e76;
+      background: var(--primary-color);
+      color: var(--secondary-color);
       text-align: center;
       padding: 15px 0;
       font-size: 16px;
@@ -452,8 +457,8 @@ footer a {
   }
 
   .contact-form button:hover {
-      color: #fce138;
-      background: #39a6b2;
+      color: var(--primary-color);
+      background: var(--tertiary-color);
   }
 
   /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER  */
